# liblitestore

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  db_schema_v1.sql  gtest.cmake  index.html  params.json
include/litestore/: litestore.h  litestore_helpers.h  litestore_iterator.h
libs/sqlite-amalgamation-3220000/: .gitignore  CMakeLists.txt
src/: litestore.c  litestore.h  litestore_data_parser.c  litestore_data_parser.h  litestore_helpers.h  litestore_iterator.h  litestore_test.c  main.c
tests/: .gitignore  CMakeLists.txt  data_parser_test.cpp  example.c  litestore_array_test.cpp  litestore_helpers_test.cpp  litestore_iterator_test.cpp  litestore_kv_test.cpp  litestore_raw_test.cpp  litestore_test.cpp  litestore_test_common.h  litestore_test_iterators.h  main.cpp
